PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add support to the uniline external package via *pel-use-uniline*.  When active,
  toggle the *uniline-mode* minor mode with ~<f11> D u~.  It can be used to create text
  drawings using Unicode characters.  PEL activates ~<f8>~ as the insert key while the mode is active.
  - Also add support for the ascii-art-to-unicode external package when either *pel-use-ascii-ast-to-unicode*
    or *pel-use-uniline* is activated.
- Add support for lisp-docstring-toggle via *pel-use-doctring-toggle*.
  When active the *lisp-docstring-toggle-mode* command is mapped to the ~<f12> M-D~ key of the
  current lisp major mode.  Available on all supported Lisp major modes.
- Add support for elisp-depmap in Emacs graphics mode via *pel-use-elisp-depmap*.
  When active its 3 commands are mapped under the ~<f11> a m~ key prefix.
- Add support for elisp-depend package via *pel-use-elisp-depend*.
  When active its 3 commands are available under the ~<f11> a d~ key prefix.
- Add support for the syntree package via *pel-use-syntree*.
  When active use *syntree-new* (bound to ~<f11> D s~) to create new
  syntree diagrams.
- *⚠️  BREAKING CHANGE:* renamed *pel-elisp-activates-minor-modes*  to
  *pel-emacs-lisp-activates-minor-modes*.
  If you have set the old one inside your Emacs customization files,
  rename then variable (and re-order them).
- Add *pel-treesit-check-setup* command, bound to ~<f11> C-t ?~.  This command
  checks the validity of Emacs Tree-Sitter grammar language directory settings
  and print any detected issue as a warning.
- Add support for the atl-long-lines package.
  Add *atl-long-lines-mode* command, bound to ~<f11> l a~, provided by the
  atl-long-lines package, activated when the *pel-use-atl-long-lines* user
  option is on (*t*).
- Add *pel-hier-modes* command, bound to ~<f11> ? e h~.  This prints the hierarchy of major modes